[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lnschema_wetlab"
authors = [{name = "Lamin Labs", email = "laminlabs@gmail.com"}]
readme = "README.md"
dynamic = ["version", "description"]
dependencies = [
    "nbproject",
    "sqlmodel",
    "lnschema_core>=0.22.0",
    "lnschema_bionty",
    "lndb_setup>=0.22.0",
]

[project.urls]
Home = "https://github.com/laminlabs/lnschema-wetlab"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "nox",
]
test = [
    "pytest>=6.0",
    "pytest-cov",
    "cloudpathlib",
    "lndb_setup",
]

[tool.black]
preview = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.coverage.run]
omit = [
    "lnschema_wetlab/*",
]
